Formatiere Witz als Zitat

--- a/docs/231128/input.ipynb
+++ b/docs/231128/input.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/231128/input.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "There are 10 kind of people -\n",
-        "\n",
-        "those who understand binary numbers and those who don't."
-      ],
       "metadata": {
         "id": "0vd0GpdFt1bv"
-      }
+      },
+      "source": [
+        ">There are 10 kind of people:\n",
+        ">\n",
+        ">those who understand binary numbers and those who don't."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -166,6 +166,10 @@
   ],
   "metadata": {
     "celltoolbar": "Slideshow",
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -182,10 +186,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.5"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
