--- a/docs/231128/input.ipynb
+++ b/docs/231128/input.ipynb
@@ -25,7 +25,7 @@
         "id": "0vd0GpdFt1bv"
       },
       "source": [
-        ">There are 10 kind of people:\n",
+        ">There are 10 types of people:\n",
         ">\n",
         ">those who understand binary numbers and those who don't."
       ]
