--- a/docs/231128/input.ipynb
+++ b/docs/231128/input.ipynb
@@ -154,13 +154,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "CPok6bFQtzTM"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0b101010\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Auftrag umsetzen"
+        "umrechnungsrichtung = input('Wollen Sie von Binär nach Dezimal (b) oder von Dezimal nach Binär (d) umrechnen?')\n",
+        "\n",
+        "zahl = input('Geben Sie eine Zahl ein: ')\n",
+        "\n",
+        "def bin_to_dec(zahl : str) -> int:\n",
+        "    return int(zahl, 2)\n",
+        "\n",
+        "def dec_to_bin(zahl : int) -> str:\n",
+        "    return bin(zahl)\n",
+        "\n",
+        "if umrechnungsrichtung == 'b':\n",
+        "    print(bin_to_dec(zahl))\n",
+        "elif umrechnungsrichtung == 'd':\n",
+        "    print(dec_to_bin(int(zahl)))\n",
+        "else:\n",
+        "    print('Ungültige Eingabe.')"
       ]
     }
   ],
@@ -185,7 +208,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
