Berechnung des Marchzins

--- a/docs/231204/musterloesung_zinsrechnen.ipynb
+++ b/docs/231204/musterloesung_zinsrechnen.ipynb
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MQMdz29DU1IB"
       },
@@ -335,22 +335,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "IGsE2JzHYzZL"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "43.75"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "stichtag = Datum(16, 11, 23)\n",
-        "referenztag = Datum(1, 10, 23)\n",
+        "tag2 = Datum(16, 11, 23)\n",
+        "tag1 = Datum(1, 10, 23)\n",
         "\n",
         "def zinsberechnung(starttag: Datum, endtag: Datum,\n",
         "                   zins: float, kapital: float) -> float:\n",
         "\n",
-        "    # TODO: Berechnung des Marchzinses\n",
-        "    pass\n",
+        "    return (kapital * zins / 100) / 360 * starttag.anzahl_tage(endtag)\n",
         "\n",
-        "zinsberechnung(stichtag, referenztag, 10_000, 3.5)"
+        "zinsberechnung(tag1, tag2, 10_000, 3.5)"
       ]
     }
   ],
