Korrigiere Open in Colab

--- a/docs/231204/musterloesung_zinsrechnen.ipynb
+++ b/docs/231204/musterloesung_zinsrechnen.ipynb
@@ -7,7 +7,9 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/231204/zinsrechnen.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/231204/musterloesung_zinsrechnen.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
       ]
     },
     {
