Formuliere die Aufgabenstellung

--- a/docs/240305/sortieralgorithmen.ipynb
+++ b/docs/240305/sortieralgorithmen.ipynb
@@ -39,6 +39,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aufgabe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Beschreiben Sie den Algorithmus von Selection Sort analog zur\n",
+    "Darstellung auf der Theorieseite."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Musterlösung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Algorithmus S** (Selection Sort)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
