Erstelle Flowchart zu Selection Sort

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -77,6 +77,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aufgabe\n",
+    "\n",
+    "Zeichnen Sie ein Flussdiagramm des formalisierten Selection Sort Algorithmus."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Selection Sort](selection_sort.svg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
