--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -93,30 +93,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "chaos = [7,3,2,5,1,8,9]"
+    "### Aufgabe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementieren Sie Selection Sort in Python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def selection_sort(unordered):\n",
-    "    ordered = []\n",
-    "    while unordered:\n",
-    "        min = unordered[0]\n",
-    "        for i in unordered:\n",
-    "            if i < min:\n",
-    "                min = i\n",
-    "        ordered.append(min)\n",
-    "        unordered.remove(min)\n",
-    "    return ordered"
+    "def selection_sort(arr):\n",
+    "    # Durchlaufen des Arrays\n",
+    "    for i in range(len(arr)):\n",
+    "        # Finde das kleinste Element im verbleibenden unsortierten Array\n",
+    "        min_idx = i\n",
+    "        for j in range(i+1, len(arr)):\n",
+    "            if arr[j] < arr[min_idx]:\n",
+    "                min_idx = j\n",
+    "        \n",
+    "        # Tausche das gefundene kleinste Element mit dem ersten Element\n",
+    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "    \n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chaos = [7,3,2,5,1,8,9]\n",
+    "print(selection_sort(chaos))"
    ]
   },
   {
