Erfasse Korrekturen im Notebook

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -15,7 +15,11 @@
     "Computerprogrammen häufig anzutreffen ist: Das sortieren von Elementen\n",
     "in auf- oder absteigender Reihenfolge. Um sich die Bedeutung sortierter\n",
     "Elemente vor Augen zu führen, stellen Sie sich ein Wörterbuch vor, in\n",
-    "dem die Wörter nicht alphabetisch sortiert sind."
+    "dem die Wörter nicht alphabetisch sortiert sind.\n",
+    "\n",
+    "In der Informatik wurden viele - mittlerweile als klassisch zu\n",
+    "bezeichnende - Sortieralgorithmen entwickelt. Einen ersten soll dieses\n",
+    "Jupyter Notebook etwas näher vorstellen."
    ]
   },
   {
@@ -29,7 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Einer der einfachsten Sortieralgorithmen fundktioniert folgendermassen:\n",
+    "Selection Sort ist einer der einfachsten Sortieralgorithmen. Er\n",
+    "funktioniert folgendermassen: \n",
     "Als erstes wird das kleinste Element in der zu sortierenden Liste\n",
     "gesucht. Wenn das kleinste Element gefunden wurde, tauscht es den Platz\n",
     "mit dem Element zuvorderst in der Liste. Als nächstes wird das\n",
@@ -69,7 +74,7 @@
     "sortierten Elementen.\n",
     "\n",
     "**S1.** \\[Kleinstes Element.\\] Suche das kleinste Element in der Liste.  \n",
-    "**S2.** \\[Tausche Platz.\\] Das kleinste Element tauscht den Platz mit\n",
+    "**S2.** \\[Platztausch.\\] Das kleinste Element tauscht den Platz mit\n",
     "dem Element zuvorderst in der Liste.  \n",
     "**S3.** \\[Liste kürzen.\\] Das vorderste Element der Liste wird von der\n",
     "Weiterverarbeitung ausgenommen. Wenn die gekürzte Liste eine Länge von 1\n",
