Visualisiere Selection Sort

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -47,6 +47,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Funktionsweise Selection Sort](selections_sort_mechanics.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Aufgabe"
    ]
   },
