--- a/docs/240305/selection_sort_mechanics.tex
+++ b/docs/240305/selection_sort_mechanics.tex
@@ -1,5 +1,5 @@
 % example.tex
-\documentclass[dvisvgm]{minimal}
+\documentclass[dvisvgm]{standalone}
 
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{tikz}
