Übernehme das neue Diagramm ins Notebook

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Selection Sort](selection_sort.svg)"
+    "![Selection Sort](selection_sort_flow_chart.svg)"
    ]
   },
   {
