Korrigiere zwei Formulierungen

--- a/docs/240305/sortieralgorithmen_muloe.ipynb
+++ b/docs/240305/sortieralgorithmen_muloe.ipynb
@@ -12,10 +12,10 @@
    "metadata": {},
    "source": [
     "In diesem Notebook geht es um ein Thema, das im Zusammenhang mit\n",
-    "Computerprogrammen häufig anzutreffen ist: Das sortieren von Elementen\n",
+    "Computerprogrammen häufig anzutreffen ist: Das Sortieren von Elementen\n",
     "in auf- oder absteigender Reihenfolge. Um sich die Bedeutung sortierter\n",
     "Elemente vor Augen zu führen, stellen Sie sich ein Wörterbuch vor, in\n",
-    "dem die Wörter nicht alphabetisch sortiert sind.\n",
+    "dem die Wörter nicht alphabetisch geordnet sind.\n",
     "\n",
     "In der Informatik wurden viele - mittlerweile als klassisch zu\n",
     "bezeichnende - Sortieralgorithmen entwickelt. Einen ersten soll dieses\n",
