--- a/docs/240312/src/rekursion_sus.ipynb
+++ b/docs/240312/src/rekursion_sus.ipynb
@@ -2,21 +2,57 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Jacques-Mock-Schindler/Studienleistung4/blob/main/src/rekursion_sus.ipynb\">\n",
-    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "lrE1Y2EzfJnS"
    },
    "source": [
+    "# Die Gausssche Summenformel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der Deutsche Mathematiker Carl Friedich Gauss soll nach der Legende\n",
+    "seinen Mathematiklehrer bei einer Strafaufgabe überlistet haben. Gemäss\n",
+    "dieser Legende soll der Lehrer Gauss (und seinen KLassenkameraden) den\n",
+    "Auftrag gegen haben, die Zahlen von 1 bis 100 zusammenzuzählen.\n",
     "\n",
-    "# Aufgabe zur Rekursion"
+    "Gauss soll nach kurzer Zeit mit der Lösung zum Lehrer gegangen sein.\n",
+    "Gauss' Lösung basierte auf folgender Formel:\n",
+    "\n",
+    "$$\n",
+    "1 + 2 + 3 + ... + (n-1) + n = \\sum_{i=1}^{n}k = \\frac{n(n+1)}{2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Diese Formel kann direkt als Funktion implementiert werden. Das\n",
+    "entsprechende Beispiel finden sie in der folgenden Zelle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Summe der Zahlen von 1 bis 100 ist 5050.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gauss_direct(n : int) -> int:\n",
+    "    return int((n*(n+1))/2)\n",
+    "\n",
+    "print(f'Die Summe der Zahlen von 1 '\n",
+    "      f'bis 100 ist {gauss_direct(100)}.')"
    ]
   },
   {
@@ -162,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
