--- a/docs/240312/src/rekursion_sus.ipynb
+++ b/docs/240312/src/rekursion_sus.ipynb
@@ -22,7 +22,7 @@
     "Gauss' Lösung basierte auf folgender Formel:\n",
     "\n",
     "$$\n",
-    "1 + 2 + 3 + ... + (n-1) + n = \\sum_{i=1}^{n}k = \\frac{n(n+1)}{2}\n",
+    "1 + 2 + 3 + ... + (n-1) + n = \\sum_{k=1}^{n}k = \\frac{n(n+1)}{2}\n",
     "$$"
    ]
   },
@@ -53,6 +53,55 @@
     "\n",
     "print(f'Die Summe der Zahlen von 1 '\n",
     "      f'bis 100 ist {gauss_direct(100)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternativ kann die Formel aber auch rekursiv implementiert werden.\n",
+    "Entsprechend stellt sich die Frage, was wäre ein kleineres aber\n",
+    "grundsätzlich gleichartiges Problem?  \n",
+    "Im vorliegenden Fall wäre das einfachste gleichartige Problem, die Summe\n",
+    "aus einer Liste von Zahlen mit der Länge 1 und dem Wert 1 zu bilden.\n",
+    "Dann ist die Summe auch 1. Als Formel könnte man das so schreiben:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{k=1}^{n}k = 1, \\text{ sofern } n=1\n",
+    "$$\n",
+    "\n",
+    "Daraus ergibt sich die Frage, wie man von $n=100$ zu $n=1$ kommt.\n",
+    "\n",
+    "Für alle Fälle, in denen $n\\neq1$ ist, gilt\n",
+    "\n",
+    "$$\n",
+    "\\sum_{k=1}^{n}k = n + \\sum_{k=1}^{n-1}k\n",
+    "$$\n",
+    "\n",
+    "In dieser Formel kann nun immer wieder $n-1$ eingesetzt werden. Das ist\n",
+    "die Rekursion.\n",
+    "\n",
+    "Zusammengefasst kann dies folgendermassen dargestellt werden:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{k=1}^{n}=\n",
+    "\\left\\{\n",
+    "    \\begin{array}{lll}\n",
+    "        1,&n=1&\\text{Basisfall}\\\\\n",
+    "        n+\\sum\\limits_{k=1}^{n-1}k,&\\forall n > 1&\\text{Rekursionsfall}\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der Basisfall ist einerseits der einfachste Fall und andererseits auch\n",
+    "der letzte Fall, der bearbeitet werden muss.  \n",
+    "Beides ist wichtig. Das der Basisfall der einfachste Fall ist, hilft das\n",
+    "Problem zu lösen."
    ]
   },
   {
