Benenne das Notebook neu ohne sus

--- a/docs/240312/src/rekursion..ipynb
+++ b/docs/240312/src/rekursion..ipynb
@@ -36,17 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Summe der Zahlen von 1 bis 100 ist 5050.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gauss_direct(n : int) -> int:\n",
     "    return int((n*(n+1))/2)\n",
@@ -101,129 +93,34 @@
     "Der Basisfall ist einerseits der einfachste Fall und andererseits auch\n",
     "der letzte Fall, der bearbeitet werden muss.  \n",
     "Beides ist wichtig. Das der Basisfall der einfachste Fall ist, hilft das\n",
-    "Problem zu lösen."
+    "Problem zu lösen. Das der Basisfall der Lezte Fall ist, der bearbeitet\n",
+    "werden muss, ermöglicht es, die Rekursion zu beenden."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rxEAl_gvfcKq"
-   },
+   "metadata": {},
    "source": [
-    "## Aufgabe zur Rekursion\n",
-    "\n",
-    "Implementieren Sie die Gausssche Summenformel nach ihrer rekursiven Definition.\n",
-    "\n",
-    "$$\n",
-    "\\sum_{k=1}^{n}k=\n",
-    "\\left\\{\n",
-    "    \\begin{array}{lll}\n",
-    "        1,&n=1&\\text{Basisfall}\\\\\n",
-    "        n+\\sum_{k=1}^{n-1}k,&\\forall n > 1&\\text{Rekursionsfall}\n",
-    "    \\end{array}\n",
-    "\\right.\n",
-    "$$\n",
-    "\n",
-    "Zeigen Sie durch den Aufruf von der Funktion `print(f'...')` an geeigneten Stellen, wie der *call stack* auf- und wieder abgebaut wird."
+    "Das eine Problemlösung rekursiv implementiert wird, bedeutet, dass die\n",
+    "Funktion sich selber aufruft.  \n",
+    "In der folgenden Zelle wird die gausssche Summenformel gemäss obiger\n",
+    "Darstellung rekursiv implementiert."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "lXsk9igzfEER"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def gauss_rec(n : int) -> int:\n",
-    "    \"\"\"Rekursive Implementation der Gaussschen Summenformel\n",
-    "\n",
-    "    Diese Funktion berechnet die Summe der ersten n natürlichen Zahlen. Sie\n",
-    "    zeigt mit den verschiedenen print() Funktionen, wie der call stack auf-\n",
-    "    und wieder abgebaut wird.\n",
-    "\n",
-    "    Args:\n",
-    "        n (int): Die natürliche Zahl bis und mit welcher die Summe\n",
-    "        gebildet wird.\n",
-    "\n",
-    "    Returns:\n",
-    "        Die Summe aller n natürlichen Zahlen als natürliche Zahl.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # TODO: Implementieren Sie gauss_rec gemäss den Vorgaben\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "iflLald6ipPC"
-   },
-   "outputs": [],
-   "source": [
-    "print(gauss_rec(3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "fnfIPuyZn8km"
-   },
-   "source": [
-    "## Aufgabe zur direkten Implementation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "YVE1zMP_mG93"
-   },
-   "source": [
-    "Stellen Sie der rekursiven Implementation die Implementation nach der Formel\n",
-    "\n",
-    "$$\n",
-    "\\sum_{k=1}^{n} k = \\frac{n(n+1)}{2}\n",
-    "$$\n",
-    "\n",
-    "gegenüber. Zeigen Sie auch hier durch den Aufruf der Funktion `print(f'...')` an geeigneten Stellen die Auslastung des call stack.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "hz277xspmZjY"
-   },
-   "outputs": [],
-   "source": [
-    "def gauss_direct(n : int) -> int:\n",
-    "    \"\"\"Direkte Implementierung der Gaussschen Summenformel\n",
-    "\n",
-    "    Diese Funktion berechnet die Summe der ersten n natürlichen Zahlen.\n",
-    "    Sie zeigt mit geeigneten print() Funktionen den Speicherbedarf.\n",
-    "\n",
-    "    Args:\n",
-    "        n (int): Die natürliche Zahl bis und mit welcher die Summe\n",
-    "        gebildet wird.\n",
-    "\n",
-    "    Returns:\n",
-    "        Die Summe aller n natürlichen Zahlen als natürliche Zahl.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # TODO: implementieren Sie gauss_direct gemäss den Vorgaben\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "WCY3pxYwm6Bq"
-   },
-   "outputs": [],
-   "source": [
-    "print(gauss_direct(3))"
+    "def gauss_recursive(n : int) -> int:\n",
+    "    if n == 1:         # Basisfall\n",
+    "        return 1\n",
+    "    else:              # Rekursionsfall\n",
+    "        return n + gauss_recursive(n - 1)\n",
+    "    \n",
+    "print(f'Die Summe der Zahlen von 1 '\n",
+    "      f'bis 100 ist {gauss_recursive(100)}.')"
    ]
   }
  ],
