--- a/docs/240312/src/rekursion.ipynb
+++ b/docs/240312/src/rekursion.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "Der Deutsche Mathematiker Carl Friedich Gauss soll nach der Legende\n",
     "seinen Mathematiklehrer bei einer Strafaufgabe überlistet haben. Gemäss\n",
-    "dieser Legende soll der Lehrer Gauss (und seinen KLassenkameraden) den\n",
+    "dieser Legende soll der Lehrer Gauss (und seinen Klassenkameraden) den\n",
     "Auftrag gegen haben, die Zahlen von 1 bis 100 zusammenzuzählen.\n",
     "\n",
     "Gauss soll nach kurzer Zeit mit der Lösung zum Lehrer gegangen sein.\n",
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "Alternativ kann die Formel aber auch rekursiv implementiert werden.\n",
-    "Entsprechend stellt sich die Frage, was wäre ein kleineres aber\n",
+    "Entsprechend stellt sich die Frage, was wäre ein kleineres, aber\n",
     "grundsätzlich gleichartiges Problem?  \n",
     "Im vorliegenden Fall wäre das einfachste gleichartige Problem, die Summe\n",
     "aus einer Liste von Zahlen mit der Länge 1 und dem Wert 1 zu bilden.\n",
@@ -64,7 +64,7 @@
     "\n",
     "Daraus ergibt sich die Frage, wie man von $n=100$ zu $n=1$ kommt.\n",
     "\n",
-    "Für alle Fälle, in denen $n\\neq1$ ist, gilt\n",
+    "Für alle Fälle, in denen $n>1$ ist, gilt\n",
     "\n",
     "$$\n",
     "\\sum_{k=1}^{n}k = n + \\sum_{k=1}^{n-1}k\n",
@@ -95,6 +95,16 @@
     "Beides ist wichtig. Das der Basisfall der einfachste Fall ist, hilft das\n",
     "Problem zu lösen. Das der Basisfall der Lezte Fall ist, der bearbeitet\n",
     "werden muss, ermöglicht es, die Rekursion zu beenden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im Rekursionsfall steht \"$\\forall n > 1$\". Das $\\forall$ Zeichen ist der\n",
+    "sogenannte Allquantor und bedeutet hier \"für alle $n$ grösser als 1.  \n",
+    "Mit Bezug auf das beschriebene Problemlösungsverfahren kann hier $n-1$\n",
+    "eingesetzt werden."
    ]
   },
   {
