Beschreibe die Grundidee von Merge Sort

--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -13,7 +13,17 @@
    "source": [
     "Selection Sort hat einen Zeitaufwand von $n^2$. Das geht besser.  \n",
     "\n",
-    "An dieser Stelle kommen *divide and conquer* Algorithmen ins Spiel."
+    "An dieser Stelle kommen *divide and conquer* Algorithmen ins Spiel. Der\n",
+    "darin verfolgte Ansatz soll am Beispiel des Sortieralgorithmus *Merge\n",
+    "Sort* illustriert werden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge Sort basiert auf der Idee, dass es effizienter ist, vorsortierte\n",
+    "Elemente zusammenzuführen als von Grund auf Elemente sortieren zu müssen."
    ]
   },
   {
