Beschreibe Merge Sort

--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -23,7 +23,13 @@
    "metadata": {},
    "source": [
     "Merge Sort basiert auf der Idee, dass es effizienter ist, vorsortierte\n",
-    "Elemente zusammenzuführen als von Grund auf Elemente sortieren zu müssen."
+    "Elemente zusammenzuführen als von Grund auf Elemente sortieren zu\n",
+    "müssen. Darauf aufbauend wird die unsortierten Elemente in sortierte\n",
+    "Elemente aufgeteilt. Dies ist spätestens dann der Fall, wenn nur noch\n",
+    "einzelne Elemente vorliegen. Die so atomar aufgeteilten Elemente werden\n",
+    "anschliessend zu sortierten Teileinheiten zusammengefügt, die dann\n",
+    "wiederum sortiert zusammengefügt werden, bis am schluss alle Elemente in\n",
+    "sortierter Reihenfolge vorliegen."
    ]
   },
   {
