Formuliere Aufwand für Selection Sort präziser.

--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Selection Sort hat einen Zeitaufwand von $n^2$. Das geht besser.  \n",
+    "Selection Sort hat einen Zeitaufwand von $n^2$, das heisst es müssen\n",
+    "$n^2$ Vergleiche angestellt werden. Das geht besser.  \n",
     "\n",
     "An dieser Stelle kommen *divide and conquer* Algorithmen ins Spiel. Der\n",
     "darin verfolgte Ansatz soll am Beispiel des Sortieralgorithmus *Merge\n",
