Füge Grafik Merge Sort mit HTML ein

--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -30,15 +30,25 @@
     "einzelne Elemente vorliegen. Die so atomar aufgeteilten Elemente werden\n",
     "anschliessend zu sortierten Teileinheiten zusammengefügt, die dann\n",
     "wiederum sortiert zusammengefügt werden, bis am schluss alle Elemente in\n",
-    "sortierter Reihenfolge vorliegen."
+    "sortierter Reihenfolge vorliegen.\n",
+    "\n",
+    "Diese Vorgehensweise kann folgendermassen visualisiert werden:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Merge Sort](https://en.wikipedia.org/wiki/File:Merge-sort-example-300px.gif)"
+    "<figure>\n",
+    "<img src=\"../images/Merge_sort_algorithm_diagram.svg\" style=\"width:75%\">\n",
+    "<figcaption align = \"center\"> Darstellung übernommen aus https://en.wikipedia.org/wiki/Merge_sort (besucht am 5. März 24)</figcaption>\n",
+    "</figure>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
