--- a/docs/240312/src/merge_sort.ipynb
+++ b/docs/240312/src/merge_sort.ipynb
@@ -48,7 +48,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Diese Darstellungen können schematisch (Analog zu Euler und Seleciton\n",
+    "Sort) folgendermassen beschrieben werden:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Algorithmus M** (Merge Sort). Sortierung einer Sequenz von $n$\n",
+    "Elementen in aufsteigender ($x_1 \\leq x_2 \\leq ... \\leq x_n$)\n",
+    "Reihenfolge durch rekursive Teilung und Fusionierung.\n",
+    "\n",
+    "**M1.** [Vorbereitung.] Definiere $n$ als die Länge der Sequenz $A$.\n",
+    "\n",
+    "**M2.** [Basisfall.] Wenn $n \\leq 1$, ist die Sequenz bereits sortiert.\n",
+    "Terminiere den Algorithmus. \n",
+    "\n",
+    "**M3.** [Teile.] Andernfalls teile $A$ in zwei Hälften $A_1[1 \\ldots \\lfloor n/2 \\rfloor]$ und $A_2[\\lfloor n/2 \\rfloor + 1 \\ldots n]$.\n",
+    "\n",
+    "**M4.** [Rekursion.] Wende Merge Sort rekursiv auf $A_1$ und $A_2$ an.\n",
+    "\n",
+    "**M5.** [Merge Schritt.] Fusioniere die sortierten Sequenzen $A_1$ und\n",
+    "$A_2$ zu einer einzigen sortierten Sequenz $A'$.  \n",
+    "- Initialisiere drei Zeiger $i$, $j$, und $k$ auf die Anfänge von $A_1$,\n",
+    "  $A_2$, und $A'$. \n",
+    "- Wiederhole, solange $A_1$ und $A_2$ Elemente enthalten: \n",
+    "    - Wenn $A_1[i] \\leq A_2[j]$, füge $A_1[i]$ zu $A'$ hinzu und erhöhe\n",
+    "      $i$ und $k$.\n",
+    "    - Andernfalls, füge $A_2[j]$ zu $A'$ hinzu und erhöhe $j$ und $k$.\n",
+    "- Füge verbleibende Elemente von $A_1$ oder $A_2$ zu $A'$ hinzu.\n",
+    "\n",
+    "**M6.** [Bereinigung.] Ersetze $A$ mit $A'$ als die sortierte Sequenz."
+   ]
   },
   {
    "cell_type": "code",
